<resources>
    <string name="app_name">Calius</string>

    <!-- Strings related to login and register -->
    <string name="prompt_email">Matrícula</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_telefono">Teléfono</string>
    <!-- Strings related to button -->
    <string name="action_sign_in">Acceder</string>
    <string name="registro">Registro</string>
    <string name="enviar">Enviar</string>
    <string name="verificar">Verificar</string>
    <string name="codigo">Código</string>
    <string name="guardar">Guardar</string>
    <string name="contraseña">Contraseña</string>
    <string name="confirmarContraseña">Confirmar</string>

    <string name="registroLabel">Ingrese sus datos</string>
    <string name="verificacionLabel">Ingrese el código de verificación</string>
    <string name="version">Versión 1.1</string>
    <string name="contraseñaLabel">Ingrese una contraseña </string>
    <string name="contraseñaLabel2">para su cuenta</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Formato de matrícula inválida</string>
    <string name="error_invalid_tel">Formato de teléfono inválida</string>
    <string name="error_invalid_cod">Formato de código inválida</string>
    <string name="error_invalid_pass">Formato de contraseña inválida</string>
    <string name="error_invalid_password">Contraseña muy corta</string>
    <string name="error_incorrect_password">Matrícula o contraseña incorrecta</string>
    <string name="usuarioExistente">Usuario existente</string>
    <string name="codigoIncorrecto">Código incorrecto</string>
    <string name="contraseñaFallida">No se pudo guardar la contraseña</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_coincidencia">Las contraseñas no coinciden</string>

    <!--titulos para las tabs-->
    <string name="page1">P1</string>
    <string name="page2">P2</string>
    <string name="page3">P3</string>
    <string name="page4">Ord</string>
    <string name="page5">Final</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_actividad_inicio">Calificaciones</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Guardar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="simulador">Simulador</string>
    <string name="acerca_de">Acerca de</string>
    <string name="notificaciones">Notificaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Calificaciones">Calificaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_prueba2">prueba2</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="palabra">0.0</string>
</resources>
