<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.edu.unsis.www.androidcalius.actividadAcceso">
    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="26dp">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"

                android:text="@string/verificacionLabel"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="101dp" />

            <AutoCompleteTextView
                android:id="@+id/codigo"
                android:layout_width="282dp"
                android:layout_height="69dp"
                android:layout_marginTop="120dp"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_verified_user_black_48dp"
                android:drawablePadding="@dimen/fab_margin"
                android:hint="@string/codigo"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="178dp"
                />

            <Button
                android:id="@+id/verificar"
                style="?android:textAppearanceSmall"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="240dp"
                android:layout_centerHorizontal="true"
                android:text="@string/verificar"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="388dp"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/boton_acceso"
                android:color="@drawable/boton_acceso"/>


        </RelativeLayout>
    </ScrollView>
</LinearLayout>
